--- a/Dockerfile.j2
+++ b/Dockerfile.j2
@@ -27,7 +27,9 @@ RUN apt update \
     && apt autoclean -y \
     && apt autoremove -y \
     && rm -rf /var/lib/apt/lists/*
-{%if image == "ubuntu:18.04"%}
+{%if image == "nvidia/cuda:10.2-base-ubuntu18.04"%}
+ENV X11VNC_VERSION=0.9.16-1
+{%elif image == "ubuntu:18.04"%}
 ENV X11VNC_VERSION=0.9.16-1
 {%else%}
 ENV X11VNC_VERSION=0.9.14-1*
